Fixed spacing issues

--- a/anaisdawes/src/CSS/Home.css
+++ b/anaisdawes/src/CSS/Home.css
@@ -1,5 +1,5 @@
 .app {
-    background-color: #567D91;
+    background-color: #E6ECF1;
     font-family: poppins;
 }
 
@@ -7,18 +7,22 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 92vh;
+    height: 100%;
     width: 100vw;
     background-color: #567D91;
+    padding-bottom: 1.48rem;
+    box-shadow: 0px 2px 7px 2px #9b9fa1;
 }
 
-.introBackgroundText{
-    font-size: 20vw;
-    line-height: 100%;
+.introBackgroundText {
+    font-size: 18vw;
+    line-height: 90%;
     color: rgba(230, 236, 241, 0.07);
-    font-weight: 700;
+    font-weight: 900;
     text-align: center;
     z-index: 0;
+    padding-top: 0.8rem;
+    padding-bottom: 0.8rem;
 }
 
 .nameContainer {
@@ -29,6 +33,7 @@
     justify-content: center;
     align-items: center;
     z-index: 1;
+    padding-bottom: 0.7vw;
 }
 
 .introName {
@@ -38,7 +43,6 @@
 
 .introTitle {
     font-size: 3.5vw;
-    font-weight: 600;
     color: #ED8957;
 }
 
@@ -46,22 +50,29 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     width: 100vw;
-    background-color: #E6ECF1;
 }
 
 .projectsHeader {
-    font-size: 2rem;
-    font-weight: 600;
+    font-size: calc(1rem + 0.8vw);
+    font-weight: 400;
     color: #0B0C21;
-    margin: 3rem;
-    margin-bottom: 2rem;
+    margin: 4rem;
+    margin-bottom: 0rem;
+}
+
+.horizontalLine {
+    width: 80%;
+    height: 0.1rem;
+    background-color: #0B0C21;
+    margin: 1.48rem;
 }
 
 .projectsGrid {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content:space-evenly;
-  align-items: center;
-  margin: 1rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 1.48rem;
 }
